Fixed some issues on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -205,6 +205,9 @@ h6 {
     padding-top: 0;
     height: 85vh;
   }
+  @include tab {
+    height: 87vh;
+  }
 }
 body.logged-in.admin-bar {
   .slider {
